--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -12,7 +12,7 @@
     --input-border: #B3B3B3;
     --input-border-hover-and-focus: var(--action-color-hover);
     --placeholder-color: #C9C9C9;
-    --disabled-background: #F6F6F6;
+    --disabled-background: #FAFAFA;
     --disabled-color: #C9C9C9;
     --error: #FF0033;
     --top-padding: 42px;
