--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -67,5 +67,6 @@
 @import url("_menu.css");
 @import url("_alert.css");
 @import url("_notifications-center.css");
+@import url("_email-link.css");
 
 
