--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -68,5 +68,6 @@
 @import url("_alert.css");
 @import url("_notifications-center.css");
 @import url("_email-link.css");
+@import url("_article.css");
 
 
