--- a/src/styles/_email-link.css
+++ b/src/styles/_email-link.css
@@ -29,7 +29,7 @@
     .email-link {
         /*display: flex;*/
         /*align-items: center;*/
-        /*gap: 17px;*/
+        gap: 14px;
         /*padding-top: 8px;*/
         /*padding-bottom: 8px;*/
         /*font-weight: bold;*/
