--- a/src/styles/_menu.css
+++ b/src/styles/_menu.css
@@ -71,6 +71,10 @@
                     margin-top: 2px;
                 }
 
+            .menu__feedback {
+                display: none;
+            }
+
             .menu__request {
                 margin-top: 8px;
             }
@@ -146,6 +150,10 @@
                         /*vertical-align: top;*/
                         /*margin-top: 2px;*/
                     }
+
+                .menu__feedback {
+
+                }
 
                 .menu__request {
                     margin-top: 14px;
@@ -249,8 +257,14 @@
                         /*margin-top: 2px;*/
                     }
 
+                .menu__feedback {
+                    margin-top: 4px;
+                    margin-left: 6px;
+                    display: block;
+                }
+
                 .menu__request {
-                    /*margin-top: 8px;*/
+                    margin-top: 24px;
                 }
 }
 
