--- a/src/styles/_request.css
+++ b/src/styles/_request.css
@@ -112,10 +112,17 @@
 @media (width < 740px) {
 
     .form {
-        width: 100%;
-        max-width: 440px;
+        width: 440px;
         padding: 22px 16px 24px;
     }
+
+    @media (width < 456px) {
+        .form {
+            width: auto;
+            max-width: 100%;
+        }
+    }
+
         .form__heading {
             /*margin-top: 0;*/
             /*margin-bottom: 0;*/
