--- a/src/styles/_article.css
+++ b/src/styles/_article.css
@@ -7,6 +7,7 @@
         margin-bottom: 0;
         font-size: 40px;
         line-height: 49px;
+        text-align: center;
     }
 
     .article__content {
