menu position bug when modal is open

--- a/src/styles/_page.css
+++ b/src/styles/_page.css
@@ -1,4 +1,5 @@
 .page {
+    position: relative; /* меню на десктопе абсолютно */
     display: flex;
     flex-direction: column;
     height: 100%;
