service gallery to bottom

--- a/src/styles/_service.css
+++ b/src/styles/_service.css
@@ -100,6 +100,8 @@
 
         .service__body {
             margin-top: 50px;
+            display: flex;
+            flex-direction: column;
         }
             .service__heading {
                 /*margin-top: 0;*/
@@ -117,6 +119,7 @@
             .service__gallery {
                 margin-top: 34px;
                 /*gap: 14px;*/
+                order: 5;
             }
                 .service__gallery-item {
 
@@ -127,7 +130,7 @@
                 }
 
             .service__bottom-content {
-                /*margin-top: 48px;*/
+                margin-top: var(--body-line-height);
             }
 }
 
